--- a/html/book/audioAB001.html
+++ b/html/book/audioAB001.html
@@ -79,6 +79,8 @@ PlayMP3('AB001-69', '第三十九篇《李鴻章雜燴大尋蹤》書亞錄音 2
 PlayMP3('AB001-70', '第四十之一篇《慈禧的食苑穢聞１奢華排場》書亞錄音 2023/10/26');
 PlayMP3('AB001-71', '第四十之二篇《慈禧的食苑穢聞２快活食補》書亞錄音 2023/11/2');
 PlayMP3('AB001-72', '第四十之三篇《慈禧的食苑穢聞３素食養生》書亞錄音 2023/11/7');
+PlayMP3('AB001-73', '第四十之四篇《慈禧的食苑穢聞４無痛療疾》書亞錄音 2023/11/21');
+PlayMP3('AB001-74', '第四十之五篇《慈禧的食苑穢聞５食苑穢聞》書亞錄音 2023/11/21');
 
 ?>
 
