--- a/html/book/86.html
+++ b/html/book/86.html
@@ -12,20 +12,112 @@ $title = '鑽石花';
 $book = 'E86';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2011/2/4 (270K) 2017/10/6');
-ShowPrcDownload('2011/2/4 (262K) 2017/10/6');
-ShowMobiDownload('2017/10/6 (737K)');
-ShowEpubDownload('2011/2/4 (175K) 2017/10/6');
-ShowVEpubDownload('2012/12/21 (176K) 2017/10/6');
+ShowUpdbDownload('2011/2/4 (270K) 2017/10/6 2023/12/2');
+ShowEpubDownload('2011/2/4 (175K) 2017/10/6 2023/12/2');
+ShowVEpubDownload('2012/12/21 (176K) 2017/10/6 2023/12/2');
 BookSectionEnd();
 ?>
+<img src="covers/86a.jpg" HSPACE=8 align=right>
 <img src="covers/86.jpg" HSPACE=8 align=right>
-《鑽石花》這篇故事，是倪匡的衛斯理系列中的第一篇。感謝Chang、彭少平、狄雯、junhong、Ellick、AK、邱應琦、Lin Lee勘誤。感謝chin223提供掃描檔。感謝東亞病夫勘誤並提供書影。感謝CC勘誤1處、豚太郎勘誤1處。<br>
+好讀書櫃【典藏版】，感謝chin223及dexdeb提供掃瞄檔，感謝dexdeb整理製作及勘誤成為【典藏版】。<br>
+<br>
+【典藏版】製作讀友按：由於本書「遠景版」沒有分章節，加上2013年時，網友Lin Lee有依「風雲時代版」做部分勘誤，所以我就使用《好讀》提供的「風雲時代版」（1989年出版）來做校正。但校正到後面發現缺了頁278之後的頁數，所以去圖書館借到2001年再版的來補強。因此我上傳提供的原書掃描檔裡，前278頁為《好讀》提供的原有1989年版，頁278之後為2001年版（有稍微跟「遠景版」對照一下，內容應該不會有差別）。在此做個說明。<br>
+<br>
+好讀書櫃《經典版》。《鑽石花》這篇故事，是倪匡的衛斯理系列中的第一篇。感謝Chang、彭少平、狄雯、junhong、Ellick、AK、邱應琦、Lin Lee勘誤。感謝chin223提供掃描檔。感謝東亞病夫勘誤並提供書影。感謝CC勘誤1處、豚太郎勘誤1處。<br>
 <br>
 以「衛斯理」為主角的系列作品中，第一個上場的故事，書中不但對「衛斯理」這個人物的來龍去脈有詳盡的交代，並提及了他的初戀，及與強勁敵手「死神」的精彩對決經過，高潮迭起……<br>
 <br>
 <font size=2>
 <a href="?M=hd&P=pr">勘誤表</a>：<br>
+(dexdeb 2023/11/27)<br>
+(依原書更改標點符號)<br>
+(依原書增加段落或文字)<br>
+楔子/序言<br>
+交待/交代(原書有誤)<br>
+一番滋味/一番況味<br>
+煙/烟(依原書)<br>
+群/羣(依原書)<br>
+鉤/鈎(依原書)<br>
+一九零/一九○<br>
+風尾穴/鳳尾穴<br>
+看得出她是一個/顯得她是一個<br>
+再扣扳機/再扣機槍<br>
+船艙能有/船艙，能有<br>
+以至人們/以致人們<br>
+我只有錢/我只要錢<br>
+瞇/眯(依原書)<br>
+一樣：/一樣，道：<br>
+如果我確切/如果要我確切<br>
+比我好得多，/比我好得多。<br>
+很快來到/很快的來到<br>
+布置/佈置<br>
+收拾更是/收拾得更是<br>
+子彈射出來的！」/子彈射出來的！」這種把戲當然騙不動我<br>
+噁心/惡心(依原書)<br>
+難道就是君子/難道是君子<br>
+黃先生你不必/黃先生，你不必<br>
+箇中高手/個中高手(依原書)<br>
+景仰她/景仰過她<br>
+一伙/一夥(依原書)<br>
+義大利/意大利(依原書)<br>
+才幹論/才幹而論<br>
+不是她的對手/不是她的敵手<br>
+像驚訝/像是驚訝<br>
+一朵即將開放/一朵將放<br>
+（Bastiz）、/（Bastiz）<br>
+剛一進場/剛一進機場<br>
+升到了/昇到了(依原書)<br>
+想到北太極門/想不到北太極門<br>
+畢竟是敵人/究竟是敵人<br>
+那麼，/那末，<br>
+不會原諒/不會見諒<br>
+手錶/手表(依原書)<br>
+併肩/並肩(依原書)<br>
+一箭雙鵰/一箭雙雕<br>
+無線電/無綫電(依原書)<br>
+就在打開門/就在打開車門<br>
+「哎」地一聲/「噢」地一聲<br>
+內心的激盪/內心的激蕩(依原書)<br>
+經理/司理(依原書)<br>
+漢於/漢子<br>
+進指如戟/迸指如戟<br>
+下著鎖/下著鏈<br>
+雅緻/雅致(依原書)<br>
+生出了陣/生出了一陣<br>
+來到這裏當然/來到這裏，當然<br>
+清醒一下/清新一下<br>
+一字不漏地/一字不易地<br>
+有人跟蹤/有人跟踪(依原書)<br>
+那麼巨大/那麼鉅大(依原書)<br>
+開了嘴/咧開了嘴<br>
+後袋中/後袴袋中<br>
+寫字台/寫字枱(依原書)<br>
+穩穩地將/穩穩將<br>
+轉動它那/轉動牠那<br>
+游得很優閒/游得很悠閒(依原書)<br>
+剛出兩尺/剛出兩呎(依原書)<br>
+妨礙/妨碍(依原書)<br>
+賭檯/賭枱<br>
+四周另有/四旁另有<br>
+放技/故技<br>
+火拼/火併(依原書)<br>
+但不討論/但不必討論<br>
+例過頭/側過頭<br>
+地毯/地毡(依原書)<br>
+倒了來/倒了下來<br>
+的話來詛咒/的話來咀咒(依原書)<br>
+看這形勢/省度形勢<br>
+那裏得來的？/那裏得來的？」<br>
+併肩走著/並肩走著(依原書)<br>
+我四面看著/我四面踱著<br>
+不會有任何人/不會有任何種人<br>
+啟運/啓運(依原書)<br>
+炯炯/烱烱(依原書)<br>
+箇中/個中(依原書)<br>
+遠颺海外/遠揚海外(依原書)<br>
+向我求助地/向我救助地<br>
+直升機/直昇機(依原書)<br>
+<br>
 (mPDB 2016/10/6)<br>
 不畏凜烈的西/不畏凜冽的西<br>
 定晴/定睛<br>
