--- a/html/Share/1010490116.html
+++ b/html/Share/1010490116.html
@@ -12,13 +12,14 @@ $title = '馬可波羅';
 $book = 'P1010490116';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/3/17');
-ShowEpubDownload('2023/3/17');
-ShowVEpubDownload('2023/3/17');
+ShowUpdbDownload('2023/3/17 2023/12/2');
+ShowEpubDownload('2023/3/17 2023/12/2');
+ShowVEpubDownload('2023/3/17 2023/12/2');
 BookSectionEnd();
 ?>
 <img src="covers/1010490116.jpg" HSPACE=8 align=right>
-好讀書櫃【典藏版】，感謝haodooist整理製作，感謝chin223提供掃瞄檔。<br>
+好讀書櫃【典藏版】，感謝haodooist整理製作，感謝chin223提供掃瞄檔。感謝Henry勘誤17處。<br>
+
 <br>
 <strong>本書簡介：</strong><br>
 <br>
@@ -43,5 +44,23 @@ BookSectionEnd();
 <br>
 <font size=2>
 <strong>勘誤表</strong>：<br>
+(Henry 2023/11/30)<br>
+殘餘泳雪/殘餘冰雪<br>
+小數阿拉伯人/少數阿拉伯人<br>
+他的勃子/他的脖子<br>
+我就會回來；很快就會回來。/我就會回來，很快就會回來。<br>
+你根本沒有看她們？怎知比不上雪芝拉？/你根本沒有看她們，怎知比不上雪芝拉？<br>
+我若去印度，一定和你回去/我若去印度，一定和你同去<br>
+　馬可說：「我們被迫/　　馬可說：「我們被迫 （缺一個空格）<br>
+傳杯換盃/傳杯換盞<br>
+弱毛豐滿/羽毛豐滿<br>
+他心中此忑/他心中忐忑<br>
+那些小官見/那些小官兒<br>
+她們夫婦/他們夫婦<br>
+推門來。/推門進來。<br>
+他約過眾人/他越過眾人<br>
+泳涼的/冰涼的<br>
+大夥見都已上船/大夥兒都已上船<br>
+闊闊真總算得所了/闊闊真總算得償所願了<br>
 </font>
 </td></tr></table>
