--- a/html/book/audioAB001.html
+++ b/html/book/audioAB001.html
@@ -85,6 +85,7 @@ PlayMP3('AB001-75', '第四十一篇《袁世凱飯桌作秀》書亞錄音 2023
 PlayMP3('AB001-76', '第四十二篇《孫中山舌尖之戀》書亞錄音 2023/12/5');
 PlayMP3('AB001-77', '第四十三篇《黃敬臨和他的千古奇宴》書亞錄音 2023/12/12');
 PlayMP3('AB001-78', '第四十四篇《紅頂吃棍譚延闓》書亞錄音 2023/12/19');
+PlayMP3('AB001-79', '第四十五篇《李叔同寺院斷食記》書亞錄音 2023/12/26');
 
 ?>
 
