--- a/html/Share/1010490214.html
+++ b/html/Share/1010490214.html
@@ -12,13 +12,13 @@ $title = '蔣介石評傳';
 $book = 'P1010490214';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/7/24');
-ShowEpubDownload('2023/7/24');
-ShowVEpubDownload('2023/7/24');
+ShowUpdbDownload('2024/1/3 2023/7/24');
+ShowEpubDownload('2024/1/3 2023/7/24');
+ShowVEpubDownload('2024/1/3 2023/7/24');
 BookSectionEnd();
 ?>
 <img src="covers/1010490214.jpg" HSPACE=8 align=right>
-好讀書櫃【典藏版】，感謝Stephen Sima整理製作及提供掃瞄檔。<br>
+好讀書櫃【典藏版】，感謝Stephen Sima整理製作及提供掃瞄檔。感謝博龍勘誤。<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
@@ -46,5 +46,27 @@ BookSectionEnd();
 <br>
 <font size=2>
 <strong>勘誤表：</strong><br>
+(2024/1/3 博龍）<br>
+「朱毛」/「朱毛匪幫」<br>
+已不可能湮滅/已不可能淹滅<br>
+一九─七年/一九一七年<br>
+蔣介石……共謀生財/蔣介石等……共謀生財<br>
+從蔣介石來看/從蔣介石看來<br>
+回滬還鄉屍/回滬還鄉<br>
+唯一的敵人/惟一的敵人<br>
+黃鄲/黃郛<br>
+譚延任行政院長/譚延闓任行政院長<br>
+狐埋狐攢/狐埋狐搰<br>
+內地學者/大陸學者<br>
+豪奴欺猢犬/豪奴欺猘犬（猘犬：瘋狗，比喻狂暴之徒）<br>
+《藍衣社組織上反滿抗日活動實例》/《藍衣社の組織と反滿抗日活動の實例》<br>
+《藍衣社把關南為資料》/《藍衣社た關あね資料》<br>
+何應欽、何成漕/何應欽、何成濬<br>
+藉故生事/借故生事<br>
+盂絕子又綜合論述/孟絕子又綜合論述<br>
+Kao in no sense acting as Wang』s agent/Kao in no sense acting as Wang's agent<br>
+有的女人被糟蹋了。/有的女人被糟蹋了！<br>
+我不像羅斯福那樣住在白宮/我不像羅斯福那樣讓她住在白宮<br>
+能不感動？/能不感動！<br>
 </font>
 </td></tr></table>
