--- a/html/book/audioAB005.html
+++ b/html/book/audioAB005.html
@@ -8,6 +8,7 @@ require_once('player.php');
 <?php
 
 PlayMP3('AB005-01', '第一回《風月無情》劉小珍錄音 2024/1/9');
+PlayMP3('AB005-02', '第二回《故人之子》劉小珍錄音 2024/1/16');
 
 ?>
 
