--- a/html/book/audioAB005.html
+++ b/html/book/audioAB005.html
@@ -10,6 +10,7 @@ require_once('player.php');
 PlayMP3('AB005-01', '第一回《風月無情》劉小珍錄音 2024/1/9');
 PlayMP3('AB005-02', '第二回《故人之子》劉小珍錄音 2024/1/16');
 PlayMP3('AB005-03', '第三回《求師終南》劉小珍錄音 2024/1/23');
+PlayMP3('AB005-04', '第四回《全真門下》劉小珍錄音 2024/2/1');
 
 ?>
 
