--- a/html/book/15H2.html
+++ b/html/book/15H2.html
@@ -12,13 +12,17 @@ $title = '沙丘';
 $book = 'G15H2';
 BookSectionBegin();
 ShowBookTitle() ;
-ShowUpdbDownload('2015/5/1 (951K) 2015/7/3');
-ShowPrcDownload('2015/5/1 (951K) 2015/7/3');
-ShowMobiDownload('2015/6/5 (2617K) 2015/7/3');
-ShowEpubDownload('2015/5/1 (633K) 2015/7/3');
-ShowVEpubDownload('2015/5/1 (633K) 2015/7/3');
+ShowUpdbDownload('2015/5/1 (951K) 2015/7/3 2024/2/8');
+ShowEpubDownload('2015/5/1 (633K) 2015/7/3 2024/2/8');
+ShowVEpubDownload('2015/5/1 (633K) 2015/7/3 2024/2/8');
 BookSectionEnd();
 ?>
+<img src="covers/15H2.jpg" HSPACE=8 align=right>
+<br>
+好讀書櫃【典藏版】，感謝Jack提供掃瞄檔及勘誤成為【典藏版】。<br>
+<br>
+（編按：讀友根據簡體中文版原書掃描檔去校對本書，所以封面文字為簡體中文，電子書內容則是正體中文，敬請留意。）<br>
+<br>
 好讀書櫃《經典版》，感謝Charles Lee整理製作：「本書改自大陸四川科學技術出版社2006年一月出版之簡中電子pdf檔。」感謝James勘誤。<br>
 <br>
 《沙丘》不僅獲得了星雲獎和雨果獎，更被讀者評為「有史以來最富想像力的作品」。作者法蘭克．赫伯特以精細入微的筆法創造了一個與地球截然不同的世界。行星阿拉吉斯……<br>
@@ -26,7 +30,49 @@ BookSectionEnd();
 　　　　　　羅勃．A．海萊恩<br>
 <br>
 <font size=2>
-勘誤表：<br>
+<strong>勘誤表：</strong><br>
+(Jack 2024/2/7)<br>
+摸稜兩可/模稜兩可<br>
+車輔/車軸<br>
+監察法管/監察法官<br>
+林加︱比特/林加．比特<br>
+埃斯馬︱特克/埃斯馬．特克<br>
+很清除/很清楚<br>
+哈克尼/哈肯尼<br>
+彼德/彼得<br>
+標準密封水瓶①/標準密封水瓶<br>
+# 註釋①錯誤<br>
+感到沙於/感到沙子<br>
+火焰噴射器和/噴氣尾焰和<br>
+#原文 jetflares，第二卷第三章亦出現，譯者譯為噴氣尾焰<br>
+不見於。/不見了。<br>
+能夠領導我們穿過/引導我們走過<br>
+領導我們穿越/引導我們走過<br>
+沙漠和陷阱的/荒漠有深坑之地的<br>
+沙漠和避開陷阱的/荒漠有深坑之地的<br>
+領袖在哪兒啊/主在哪裡呢<br>
+主啊，在哪裡/主在哪裡呢<br>
+# 能夠領導我們穿過沙漠和陷阱的領袖在哪兒啊？<br> 
+# 領導我們穿越沙漠和避開陷阱的主啊，在那裡？<br>
+# 同句前後出現兩次，但翻譯文字不同。<br>
+# 引用自耶利米書2:6<br>
+# 他們也不問：那領我們從埃及地上來，引導我們走過曠野，<br>
+# 走過荒漠有深坑之地、乾旱死蔭之地、無人經過、無人居住<br>
+# 之地的耶和華在哪裡呢？<br>
+水、綠草/水、青草<br>
+# 有三樣東西可醫治心病──水、綠草和漂亮的女人。<br>
+# 引用自詩篇 23:2  他使我躺臥在青草地上，領我到安靜的水邊。<br>
+異手信使/翼手信使<br>
+護士團/護使團<br>
+「母親」。/「母親。」<br>
+回測/目測<br>
+# 原文 gauge<br>
+彙集中/會集中<br>
+史帝大吃/史帝加大吃<br>
+保歲/保羅<br>
+混娥/混戰<br>
+薩非/瑟菲<br>
+<br>
 (James 2015/7/3)<br>
 幹得發疼/乾得發疼<br>
 朕在非難你嗎？/朕在為難你嗎？ <font color=#0066CC>(未改，原正確。非難：指責別人的過失。)</font><br>
@@ -52,4 +98,4 @@ BookSectionEnd();
 什麼東兩突然/什麼東西突然<br>
 花些時問來觀/花些時間來觀<br>
 </font>
-</td></tr></table>
+</td></tr></table><br>
