--- a/html/book/15H3.html
+++ b/html/book/15H3.html
@@ -12,19 +12,47 @@ $title = '沙丘救世主';
 $book = 'G15H3';
 BookSectionBegin();
 ShowBookTitle() ;
-ShowUpdbDownload('2015/5/1 (346K) 2015/7/3');
-ShowPrcDownload('2015/5/1 (348K) 2015/7/3');
-ShowMobiDownload('2015/6/5 (981K) 2015/7/3');
-ShowEpubDownload('2015/5/1 (239K) 2015/7/3');
-ShowVEpubDownload('2015/5/1 (239K) 2015/7/3');
+ShowUpdbDownload('2024/2/10 (346K) 2015/7/3 2015/5/1');
+ShowEpubDownload('2024/2/10 (239K) 2015/7/3 2015/5/1');
+ShowVEpubDownload('2024/2/10 (239K) 2015/7/3 2015/5/1');
 BookSectionEnd();
 ?>
+<img src="covers/15H3.jpg" HSPACE=8 align=right>
+<br>
+好讀書櫃【典藏版】，感謝Jack提供掃瞄檔及勘誤成為【典藏版】。<br>
+<br>
+(編按：讀友根據簡體中文版原書掃描檔校對本書，所以封面文字為簡體中文，電子書內容則是正體中文，敬請留意。）<br>
+<br>
 好讀書櫃《經典版》，感謝Charles Lee整理製作。感謝James勘誤。<br>
 <br>
 在《沙丘救世主》中，保羅帶領他的人民開始在沙丘星上探索新的發展空間。當然，環境依然惡劣，社會關係依然複雜。<br>
 <br>
 <font size=2>
-勘誤表：<br>
+<strong>勘誤表：</strong><br>
+(Jack 2024/2/8)<br>
+託缽/托缽<br>
+# 拖缽為佛教正式用法，「託缽」極少出現，可能是古人錯寫。<br>
+絲絲/噝噝<br>
+讒媚/諂媚<br>
+# 讒媚：以讒言害人逢迎；諂媚：逢迎巴結。原文：fawning，僅有逢迎之意。<br>
+少哆嗦/少囉嗦<br>
+合成器觸覺／合成器；觸覺<br>
+厘米/公分<br>
+該心/核心<br>
+徑行/逕行<br>
+# 簡體字徑逕同字，繁體字「徑行」：任意而行，「逕行」：直接行動不必考慮其它因素。<br>
+# 此處文義為後者，最多只考慮一件事。<br>
+所所有/所有<br>
+卞垂/下垂<br>
+監視者他自己的手下，/監視者──<br>
+在空中的撲翼機上/在空中的撲翼機上自己的手下<br>
+# 原文 sensed the watchers — his own force hovering in thopters far<br>
+# overhead . . . and those others . . . next door.<br>
+客易/容易<br>
+沙摸/沙漠<br>
+金屬服窩/金屬眼窩<br>
+# the sockets of his metal eyes<br>
+<br>
 (James 2015/7/3)<br>
 保歲/保羅<br>
 <br>
