--- a/html/book/15H4.html
+++ b/html/book/15H4.html
@@ -12,19 +12,62 @@ $title = '沙丘之子';
 $book = 'G15H4';
 BookSectionBegin();
 ShowBookTitle() ;
-ShowUpdbDownload('2015/5/1 (627K) 2015/7/3');
-ShowPrcDownload('2015/5/1 (629K) 2015/7/3');
-ShowMobiDownload('2015/6/5 (1780K) 2015/7/3');
-ShowEpubDownload('2015/5/1 (448K) 2015/7/3');
-ShowVEpubDownload('2015/5/1 (449K) 2015/7/3');
+ShowUpdbDownload('2015/5/1 (627K) 2015/7/3 2024/2/17');
+ShowEpubDownload('2015/5/1 (448K) 2015/7/3 2024/2/17');
+ShowVEpubDownload('2015/5/1 (449K) 2015/7/3 2024/2/17');
 BookSectionEnd();
 ?>
+<img src="covers/15H4.jpg" HSPACE=8 align=right>
+好讀書櫃【典藏版】，感謝Jack提供掃瞄檔及勘誤成為【典藏版】。<br>
+<br>
+(編按：讀友根據簡體中文版原書掃描檔校對本書，所以封面文字為簡體中文，電子書內容則是正體中文，敬請留意。）<br>
+<br>
 好讀書櫃《經典版》，感謝Charles Lee整理製作。感謝James勘誤。<br>
 <br>
 在《沙丘之子》中，沙丘星在空前穩定的社會環境中迅速繁榮。在帝權得到鞏固的同時，大地漸漸有了綠色，空氣也濕潤起來。<br>
 <br>
 <font size=2>
 勘誤表：<br>
+(Jack 2024/2/17)<br>
+嗚叫/鳴叫<br>
+失衡一對/失衡──對<br>
+脫而出/脫口而出<br>
+示巴/希巴<br>
+# 譯者混合使用示巴及希巴。現統一翻為繁體常用的「希巴」<br>
+萊代/萊托<br>
+在於什麼/在幹什麼<br>
+小伙子很想/小伙子很像<br>
+字聯公司/宇聯公司<br>
+陳請者/陳情者<br>
+至氣中/空氣中<br>
+定音豉/定音鼓<br>
+照礙透亮/照得透亮<br>
+也門/葉門<br>
+# 改為繁體常用的「葉門」<br>
+較延/較遠<br>
+對對待她/對待她<br>
+跡是/跡象是<br>
+陰謀但/陰謀，但<br>
+釋迦籐卷/釋迦籐卷軸<br>
+一險/危險<br>
+法拉肯德/法拉肯的<br>
+寒戰/寒顫<br>
+巴比倫①困境/巴別①困境<br>
+巴比倫：出/巴別：出<br>
+巴比倫塔/巴別塔<br>
+# 翻譯錯誤，原文 Babel<br>
+恐懼對/恐懼是對<br>
+清楚了/清除了<br>
+任最後/在最後<br>
+於什麼/幹什麼<br>
+不動」/不動。」<br>
+牆跟前/牆根前<br>
+刀把他/刀把。他<br>
+上寅/上演<br>
+絲絲聲/噝噝聲<br>
+絲絲的聲/噝噝的聲<br>
+去見阿拉肯/去阿拉肯<br>
+<br>
 (James 2015/7/3)<br>
 加餐/大餐 <font color=#0066CC>(未改，原似正確。)</font><br>
 每一大/每一天<br>
