Uploaded audiobooks AB001 part 87 and AB005 part 06, plus other typo corrections

--- a/html/book/279.html
+++ b/html/book/279.html
@@ -1,5 +1,5 @@
 <script type="text/javascript">
-SetTitle("唐‧趙蕤《戰國策精華》");
+SetTitle("唐‧趙蕤《長短經》");
 SetLink('<a href="?M=hd&P=wisdom-4">隨身智囊 書目</a>');
 </script>
 
