--- a/html/book/audioAB005.html
+++ b/html/book/audioAB005.html
@@ -12,6 +12,7 @@ PlayMP3('AB005-02', '第二回《故人之子》劉小珍錄音 2024/1/16');
 PlayMP3('AB005-03', '第三回《求師終南》劉小珍錄音 2024/1/23');
 PlayMP3('AB005-04', '第四回《全真門下》劉小珍錄音 2024/2/1');
 PlayMP3('AB005-05', '第五回《活死人墓》劉小珍錄音 2024/2/8');
+PlayMP3('AB005-06', '第六回《玉女心經》劉小珍錄音 2024/2/15');
 
 ?>
 
