Revised books 1010490075 and 1010490132

--- a/html/Share/1010490075.html
+++ b/html/Share/1010490075.html
@@ -12,13 +12,13 @@ $title = '兩宋風雲';
 $book = 'P1010490075';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/2/23 2023/1/18');
-ShowEpubDownload('2023/2/23 2023/1/18');
-ShowVEpubDownload('2023/2/23 2023/1/18');
+ShowUpdbDownload('2024/02/20 2023/2/23 2023/1/18');
+ShowEpubDownload('2024/02/20 2023/2/23 2023/1/18');
+ShowVEpubDownload('2024/02/20 2023/2/23 2023/1/18');
 BookSectionEnd();
 ?>
 <img src="covers/1010490075.jpg" HSPACE=8 align=right>
-好讀書櫃【典藏版】，感謝Sherlock整理製作及提供掃瞄檔。感謝Gilbert勘誤。<br>
+好讀書櫃【典藏版】，感謝Sherlock整理製作及提供掃瞄檔。感謝Gilbert、Jack勘誤。<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
@@ -45,6 +45,41 @@ BookSectionEnd();
 <br>
 <font size=2>
 <strong>勘誤表</strong>：<br>
+(Jack 2024/02/20)<br>
+中與四將/中興四將<br>
+吳价/吳玠<br>
+疲備/疲憊<br>
+一杆旗/一桿旗<br>
+上兵們/士兵們<br>
+电田/屯田<br>
+鐘相/鍾相<br>
+自然通要/自然還要<br>
+御制/御製<br>
+千鐘粟/千鍾粟<br>
+納判/納叛<br>
+腰扞/腰桿<br>
+唯利是圈/唯利是圖<br>
+貪欲/貪慾<br>
+沒准/沒準<br>
+淫欲/淫慾<br>
+呂扯/呂祉<br>
+周幣/周匝<br>
+怎麼辨/怎麼辦<br>
+運輪/運輸<br>
+個柄/個把柄<br>
+插手立正/叉手立正<br>
+卒死餘/卒死於<br>
+愧儡/傀儡<br>
+悻免/倖免<br>
+不到十五歲/不到三十五歲<br>
+師歸人/師歸天<br>
+副使以開/副使以聞<br>
+個全人/個軍人<br>
+卷了/捲了<br>
+待箸/待著<br>
+承婼/承諾<br>
+拭兄/弒兄<br>
+<br>
 (Gilbert 2023/02/23)<br>
 它與唐詩並稱為中國古典文學藝術的瑰寶在繪畫、書法藝術上/它與唐詩並稱為中國古典文學藝術的瑰寶。在繪畫、書法藝術上<br>
 氏處機/丘處機<br>
