--- a/html/Share/1010490132.html
+++ b/html/Share/1010490132.html
@@ -12,13 +12,13 @@ $title = '最後的將軍：德川慶喜';
 $book = 'P1010490132';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2023/4/3');
-ShowEpubDownload('2023/4/3');
-ShowVEpubDownload('2023/4/3');
+ShowUpdbDownload('2024/2/20 2023/4/3');
+ShowEpubDownload('2024/2/20 2023/4/3');
+ShowVEpubDownload('2024/2/20 2023/4/3');
 BookSectionEnd();
 ?>
 <img src="covers/1010490132.jpg" HSPACE=8 align=right>
-好讀書櫃【典藏版】，感謝Frank Hsu整理製作，感謝guinness提供掃瞄檔。<br>
+好讀書櫃【典藏版】，感謝Frank Hsu整理製作，感謝guinness提供掃瞄檔。感謝Jack勘誤。<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
@@ -50,5 +50,59 @@ BookSectionEnd();
 <br>
 <font size=2>
 <strong>勘誤表</strong>：<br>
+(Jack 2024/02/20)<br>
+而且，慶喜以前….忘記的。（第十一章，此段重複兩次）<br>
+過，這並非….報告書，（第十一章，此段重複兩次）<br>
+會議依慣例….只聽到容（第十六章，重複兩次，分段有誤）<br>
+接著慶喜….現實世界（第十七章，重複兩次，分段有誤）<br>
+出圧/出任<br>
+r像/「像<br>
+又取/又娶<br>
+吤紹/介紹<br>
+甚三郍/甚三郎<br>
+攘夷一途攘夷一途/攘夷一途<br>
+薩摩蕃/薩摩藩<br>
+聚隻/聚集<br>
+豊後/豐後<br>
+來福搶/來福槍<br>
+鳥羽衝道/鳥羽街道<br>
+山木棍/山麓<br>
+農藏坊/豐藏坊<br>
+石清幾幡宮/石清水八幡宮<br>
+假病鎮力/假病，<br>
+這足底/這些<br>
+業名/桑名<br>
+弟弟余九麿/弟弟九麿<br>
+幕俯/幕府<br>
+橋前持長槍/轎前持長槍<br>
+洒井家/酒井家<br>
+武巨/武臣<br>
+人為詔/偽詔<br>
+大坂/大阪<br>
+二位侍/二位隨從<br>
+工戶/江戶<br>
+拿被崙/拿破崙<br>
+門臣/內臣<br>
+裝東/裝束<br>
+床幾隊/床几隊<br>
+二心』/二心，<br>
+熱諴/熱誠<br>
+春嶔/春嶽<br>
+薩搴藩/薩摩藩<br>
+義正嚴辭/義正辭嚴<br>
+貝體/具體<br>
+德Ⅲ/德川<br>
+旗攱/旗鼓<br>
+暮府/幕府<br>
+一張瞼/一張臉<br>
+旱日/早日<br>
+大納言/大訥言<br>
+起蔽/起敝<br>
+岩倉貝視/岩倉具視<br>
+冪府/幕府<br>
+上佐藩/土佐藩<br>
+在栖川/有栖川<br>
+3藩士/三藩士<br>
+擧著/舉著<br>
 </font>
 </td></tr></table>
