Upload audiobook AB005 part 08

--- a/html/book/1472.html
+++ b/html/book/1472.html
@@ -18,7 +18,7 @@ ShowEpubDownload('2014/2/7 (332K) 2014/9/5');
 ShowVEpubDownload('2014/2/7 (332K) 2014/9/5');
 BookSectionEnd();
 ?>
-好讀書櫃《經典版》，感謝sue1289整理製作：「小說情節和電影差很多，小說要比電影精采得多！錯別字和大陸上的名詞好多，改的不亦樂乎哩！」感謝Vivian、mark勘誤。<br>
+好讀書櫃《經典版》，感謝sue1289整理製作。感謝Vivian、mark勘誤。<br>
 <br>
 馬康姆和他朋友古生物學家萊文找到B地索那島，並組織探險隊去這個「失落的世界」研究生物絕種的謎題，但同時國際遺傳技術公司的競爭對手庫珀蒂諾生物合成公司也派人到索那島偷恐龍蛋，意圖得到複製恐龍的技術。……一場驚心動魄的歷程展開在讀者面前。<br>
 <br>
