--- a/html/book/audioAB005.html
+++ b/html/book/audioAB005.html
@@ -14,6 +14,7 @@ PlayMP3('AB005-04', '第四回《全真門下》劉小珍錄音 2024/2/1');
 PlayMP3('AB005-05', '第五回《活死人墓》劉小珍錄音 2024/2/8');
 PlayMP3('AB005-06', '第六回《玉女心經》劉小珍錄音 2024/2/15');
 PlayMP3('AB005-07', '第七回《重陽遺刻》劉小珍錄音 2024/2/22');
+PlayMP3('AB005-08', '第八回《白衣少女》劉小珍錄音 2024/3/2');
 
 ?>
 
