Upload revised books 10D7 and 10E1

--- a/html/Share/1010490383.html
+++ b/html/Share/1010490383.html
@@ -22,7 +22,7 @@ BookSectionEnd();
 <br>
 <strong>本書簡介：</strong><br>
 <br>
-《這是一部專門介紹禁忌和幽默笑話，以及二者辯證關係的書籍。它所涉及的領域輕鬆快樂，充滿了知識和情趣，有時還帶有一些神秘和神奇，只是常常鮮為人知，因為人們實在猜不透：在令人恐懼、壓抑的禁忌和令人捧腹開懷的幽默之間，到底能有什麼必然的聯繫？幽默既是一種機智形式，也是一種玩笑態度，幽默在很多情況下，都起源於對禁忌壓迫的反抗和逃避。<br>
+這是一部專門介紹禁忌和幽默笑話，以及二者辯證關係的書籍。它所涉及的領域輕鬆快樂，充滿了知識和情趣，有時還帶有一些神秘和神奇，只是常常鮮為人知，因為人們實在猜不透：在令人恐懼、壓抑的禁忌和令人捧腹開懷的幽默之間，到底能有什麼必然的聯繫？幽默既是一種機智形式，也是一種玩笑態度，幽默在很多情況下，都起源於對禁忌壓迫的反抗和逃避。<br>
 <br>
 <br>
 <strong>編著者：</strong><br>
