--- a/html/Share/10D7.html
+++ b/html/Share/10D7.html
@@ -12,13 +12,14 @@ $title = '血濺黃金柱';
 $book = 'I10D7';
 BookSectionBegin();
 ShowBookTitle() ;
-ShowUpdbDownload('2012/9/7 (141K) 2015/8/7');
-ShowPrcDownload('2012/9/7 (132K) 2015/8/7');
-ShowMobiDownload('2015/8/7 (379K)');
-ShowEpubDownload('2012/9/7 (90K) 2015/8/7');
-ShowVEpubDownload('2013/6/7 (90K) 2015/8/7');
+ShowUpdbDownload('2012/9/7 (141K) 2015/8/7 2024/3/2');
+ShowEpubDownload('2012/9/7 (90K) 2015/8/7 2024/3/2');
+ShowVEpubDownload('2013/6/7 (90K) 2015/8/7 2024/3/2');
 BookSectionEnd();
 ?>
+好讀書櫃【典藏版】，感謝guinness提供掃瞄檔，感謝Henry整理製作及勘誤成為【典藏版】。<br>
+（製作讀友按：金蘭版【神秘血影掌】原書掃瞄檔收錄〈血濺黃金柱〉，本電子書乃根據之製作。）<br>
+<br>
 好讀書櫃《經典版》，感謝張鴻基整理製作。感謝邱應琦、廖佩&#24419;勘誤。<br>
 <br>
 這本是<a href="?M=Share&P=1088#Iris">女黑俠木蘭花系列</a>之二十五《血濺黃金柱》。<br>
@@ -33,6 +34,64 @@ BookSectionEnd();
 <br>
 <font size=2>
 <a href="?M=hd&P=pr">勘誤表</a>：<br>
+(Henry 2024/3/1)<br>
+雖以勝數/難以勝數<br>
+五百長，二十寬，每隔二十，/五百呎長，二十呎寬，每隔二十呎，<br>
+二十地方/二十呎地方<br>
+那要問它/那要問牠 （多處它/牠）<br>
+在這幹什麼/在這裏幹什麼<br>
+一亟亟其/一種極其<br>
+一陣擊響/一陣聲響<br>
+他一們/他們<br>
+這/這裏 （多處）<br>
+那/那裏 （多處）<br>
+幾幾分鐘/幾分鐘<br>
+立待跳車/立時跳車<br>
+都一點也沒有/卻一點也沒有<br>
+凶狠的神色/兇狠的神色<br>
+撥槍/拔槍<br>
+我會們／我們<br>
+筆麗／華麗<br>
+陡地一忖/陡地一怔<br>
+辟出來/闢出來<br>
+他都突然/他卻突然<br>
+趕到現揚/趕到現場<br>
+重門深鎮/重門深鎖<br>
+千奇百住/千奇百怪<br>
+貼着，/貼着牆，<br>
+高翔都找不到/高翔卻找不到<br>
+全皆停來/全皆傳來<br>
+用黃金絲嵌出/用黃金絲鑲嵌出<br>
+那都已是/那卻已是<br>
+無外形看來/照外形看來<br>
+金子成的/金子鑲成的<br>
+到逢了/到達了<br>
+絕不曾犯/絕不會犯<br>
+吃一驚/吃了一驚<br>
+雇你的人/僱你的人<br>
+雇他的人/僱他的人<br>
+情調都仍然/情調卻仍然<br>
+太蘭花/木蘭花<br>
+不到半處/不到半吋處<br>
+不到一外/不到一吋外<br>
+那只「表」/那隻「錶」<br>
+可怕的臉色/可怕的土色<br>
+笞道/答道<br>
+形塑/雕塑<br>
+嗶啦/嘩啦<br>
+撥出了佩槍/拔出了佩槍<br>
+率傾/率領<br>
+約唔/約晤<br>
+造：「/道：「<br>
+白手杖中/自手杖中<br>
+強追穆秀珍/強迫穆秀珍<br>
+殘峽/殘缺<br>
+部一直/卻一直<br>
+大約八尺/大約八呎<br>
+車子還還未曾/車子還未曾<br>
+這幅價值的名畫/這幅價值連城的名畫<br>
+藝術院院員/藝術院院長<br>
+<br>
 (mPDB 2015/8/7)<br>
 泠笑/冷笑<br>
 麼人勿忙地從/麼人匆忙地從<br>
