--- a/html/Share/10E1.html
+++ b/html/Share/10E1.html
@@ -12,13 +12,14 @@ $title = '神秘血影掌';
 $book = 'I10E1';
 BookSectionBegin();
 ShowBookTitle() ;
-ShowUpdbDownload('2012/9/7 (140K) 2016/9/2');
-ShowPrcDownload('2012/9/7 (130K) 2016/9/2');
-ShowMobiDownload('2015/8/7 (378K) 2016/9/2');
-ShowEpubDownload('2012/9/7 (88K) 2016/9/2');
-ShowVEpubDownload('2013/6/7 (88K) 2016/9/2');
+ShowUpdbDownload('2012/9/7 (140K) 2016/9/2 2024/3/2');
+ShowEpubDownload('2012/9/7 (88K) 2016/9/2 2024/3/2');
+ShowVEpubDownload('2013/6/7 (88K) 2016/9/2 2024/3/2');
 BookSectionEnd();
 ?>
+<img src="covers/10E1.jpg" HSPACE=8 align=right>
+好讀書櫃【典藏版】，感謝guinness提供掃瞄檔，感謝Henry整理製作及勘誤成為【典藏版】。<br>
+<br>
 好讀書櫃《經典版》，感謝張鴻基整理製作。感謝邱應琦、廖佩彣勘誤。感謝Gilbert勘誤23處、張鴻基勘誤1處。<br>
 <br>
 這本是<a href="?M=Share&P=1088#Iris">女黑俠木蘭花系列</a>之二十六《神秘血影掌》。<br>
@@ -27,11 +28,38 @@ BookSectionEnd();
 <br>
 機場有九架大型噴射客機被竊駕而去，分別隸屬於七個不同的航空公司。此外，被盜竊的，還有七架訓練機，以及五架軍用機。機場表示事先已接獲自稱「血影掌」的警告，此舉是為了向警方挑戰！<br>
 <br>
-飛機被竊同時，高翔亦被俘虜。這個自稱「血影掌」的人，顯然指揮著一個龐大及極其嚴密的犯罪組織，木蘭花誓要揭破「血影掌」的神秘身份。
-<br>
+飛機被竊同時，高翔亦被俘虜。這個自稱「血影掌」的人，顯然指揮著一個龐大及極其嚴密的犯罪組織，木蘭花誓要揭破「血影掌」的神秘身份。<br>
 <br>
 <font size=2>
 <a href="?M=hd&P=pr">勘誤表</a>：<br>
+(Henry 2024/3/1)<br>
+都/卻（多處）<br>
+秀盾/秀眉<br>
+住在項樓/住在頂樓<br>
+這絛街/這條街<br>
+不會認出我們/不曾認出我們<br>
+麻醉醉針/麻醉針<br>
+可能曾跟蹤/可能會跟蹤<br>
+茶凡/茶几<br>
+一看十分異樣/一種十分異樣<br>
+豫秀珍/穆秀珍<br>
+找打電話/我打電話<br>
+所停出來的笑聲/所傳出來的笑聲<br>
+五分鐘之使/五分鐘之後<br>
+非回小可/非同小可<br>
+撤下了大量/撒下了大量<br>
+小著了它/小看了它<br>
+為立一振/為之一振<br>
+郊「線頭」/那「線頭」<br>
+一怪叫聲/一下怪叫聲<br>
+四無人色/面無人色<br>
+這般快艇/這艘快艇<br>
+通向下一面/通向下面<br>
+立點迎了上來/立時迎了上來<br>
+一小隊軍險/一小隊軍隊<br>
+一點動靜也沒沒/一點動靜也沒有<br>
+湊了這來/湊了過來<br>
+<br>
 (張鴻基 2016/9/2)<br>
 血影掌的聲耆/血影掌的聲音<br>
 <br>
