--- a/html/Share/1010490394.html
+++ b/html/Share/1010490394.html
@@ -22,6 +22,8 @@ BookSectionEnd();
 <br>
 <strong>本書簡介：</strong><br>
 <br>
+註：確認書名是《晚鳴軒愛讀詩》，遺憾本封面圖片上欠「晚」字，惟圖像清晰，故採用之。不便之處，敬請原諒。<br>
+<br>
 《晚鳴軒愛讀詩》是葉慶炳教授的新嘗試。他以雜文談論古典詩歌，使讀者以輕鬆愉快的心情進入古典詩歌的世界，並且從古典詩歌的世界體悟立身處世的道理。一卷在手，終身受用無窮。<br>
 <br>
 <br>
