Revised book description pages for 1010490396, 1010490397, 1010490398, and 1010490399

--- a/html/Share/1010490397.html
+++ b/html/Share/1010490397.html
@@ -46,7 +46,7 @@ BookSectionEnd();
 ★顛覆傳統的少女思維：既有復古的英式風情，同時也呈現傳統社會對女孩的限制與刻板想法，能夠感同身受艾諾拉追求自由的堅強意志。<br>
 <br>
 <br>
-<strong>作者簡介：</strong>
+<strong>作者簡介：</strong><br>
 <br>
 南西．史賓格（Nancy Springer）<br>
 <br>
