--- a/html/Share/1010490399.html
+++ b/html/Share/1010490399.html
@@ -47,7 +47,7 @@ BookSectionEnd();
 ☆「艾諾拉的孤獨、聰明、幽默感和純粹的勇氣，讓她成為一個極富魅力的女主角。」——《學校圖書館雜誌》<br>
 <br>
 <br>
-<strong>作者簡介：</strong>
+<strong>作者簡介：</strong><br>
 <br>
 南西．史賓格（Nancy Springer）<br>
 <br>
