--- a/html/Share/0393.html
+++ b/html/Share/0393.html
@@ -12,20 +12,44 @@ $author = '倪匡';
 $title = '遊戲'; 
 $book = 'I0393';
 ShowBookTitle();
-ShowUpdbDownload('2011/6/10 (201K) 2016/1/1');
-ShowPrcDownload('2011/6/10 (197K) 2016/1/1');
-ShowMobiDownload('2016/1/1 (562K)');
-ShowEpubDownload('2011/6/10 (134K) 2016/1/1');
-ShowVEpubDownload('2013/4/26 (134K) 2016/1/1');
+ShowUpdbDownload('2011/6/10 (201K) 2016/1/1 2024/3/12');
+ShowEpubDownload('2011/6/10 (134K) 2016/1/1 2024/3/12');
+ShowVEpubDownload('2013/4/26 (134K) 2016/1/1 2024/3/12');
 BookSectionEnd();
 ?>
-倪匡之衛斯理系列之 58D。感謝何永鴻整理製作。感謝sean、Lin Lee勘誤。感謝方圓勘誤1處。<br>
+<img src="covers/0393.jpg" HSPACE=8 align=right>
+好讀書櫃【典藏版】，感謝guinness提供掃瞄檔，感謝Henry整理製作及勘誤成為【典藏版】。<br>
 <br>
-七星體人進行著改造地球生物的計畫，瘋狂的巴曼又圖以核爆來改變歷史。
-在魔鬼暗礁下，衛斯理將如何面對這一連串的離奇？<br>
+（編按：【典藏版】乃根據「勤+緣出版社」第七版（一九九四年七月）來製作，而此處封面圖片來自「勤+緣出版社」二零零一年四月版本，敬請留意。）<br>
+<br>
+倪匡之衛斯理系列之 58D。感謝何永鴻整理製作《經典版》。感謝sean、Lin Lee勘誤。感謝方圓勘誤1處。<br>
+<br>
+七星體人進行著改造地球生物的計畫，瘋狂的巴曼又圖以核爆來改變歷史。 在魔鬼暗礁下，衛斯理將如何面對這一連串的離奇？<br>
 <br>
 <font size=2>
 <a href="?M=hd&P=pr">勘誤表</a>：<br>
+(Henry 2024/3/12)<br>
+──/…… （多處）<br>
+一旦開戰/一旦開始<br>
+海軍將軍/海軍將領<br>
+伊斯但堡/伊斯坦堡<br>
+三個追悼儀式/一個追悼儀式<br>
+一區城市/一座城市<br>
+蜜一樣的皮膚/蜜色一樣的皮膚<br>
+默然離去/黯然離去<br>
+同一些進來的人/問一些進來的人<br>
+班提所/班提斯<br>
+越看起被吸引/越看越被吸引<br>
+電信局/電訊局<br>
+回航的下午時/回航的下午六時<br>
+就會把巴曼少將/就曾把巴曼少將<br>
+一的枚導彈/的一枚導彈<br>
+那說，/那麼，<br>
+有人把想/有人想把<br>
+這種的情形/這樣的情形<br>
+好好奇心/好奇心<br>
+一間飛船/一艘飛船<br>
+<br>
 (mPDB 2016/1/1)<br>
 骨格粗壯/骨骼粗壯<br>
 好整似暇/好整以暇<br>
