--- a/html/book/0850.html
+++ b/html/book/0850.html
@@ -12,17 +12,235 @@ $title = '易經雜說';
 $book = 'B0850';
 BookSectionBegin();
 ShowBookTitle() ;
-ShowUpdbDownload('2015/3/6 (306K) 2016/7/1');
-ShowPrcDownload('2015/3/6 (296K) 2016/7/1');
-ShowMobiDownload('2016/7/1 (3677K)');
-ShowEpubDownload('2015/3/6 (192K) 2016/7/1');
-ShowVEpubDownload('2015/3/6 (192K) 2016/7/1');
+ShowUpdbDownload('2015/3/6 (306K) 2016/7/1 2024/4/2');
+ShowEpubDownload('2015/3/6 (192K) 2016/7/1 2024/4/2');
+ShowVEpubDownload('2015/3/6 (192K) 2016/7/1 2024/4/2');
 BookSectionEnd();
 ?>
-好讀書櫃《經典版》，感謝寶老師製作提供。感謝朱廷霖勘誤3處。<br>
+好讀書櫃《經典版》，感謝寶老師製作提供。感謝朱廷霖勘誤3處。感謝書蟲勘誤多處。<br>
+（編按：本書是《經典版》，誠徵繁體版原書掃瞄檔作為參考依據。為了便利讀者理解書中《易經》知識，站長特准並十分感謝讀友書蟲修正《經典版》錯別字及符號。）<br>
 <br>
 <font size=2>
 <a href="?M=hd&P=pr">勘誤表</a>：<br>
+(書蟲　2024/3/29)<br>
+*更正依2006年臺灣二版三十一刷<br>
+<br>
+原書中有很多的「象」被誤作為「彖」，省略號「……」被破折號「--」代替，現就所見者更正。另原書經常在一篇未完便斷章，如乾卦便分開在第六部分和第七部分，現將乾、坤、屯、蒙、需、序卦各篇獨立成章。此外，將「無咎」、「無妄」依古文改為「无咎」、「无妄」，並用「☰ ☱ ☲ ☳ ☴ ☵ ☶ ☷」等字體代替「陽陽陽 ……」等。 <br>
+<br>
+第一部份  <br>
+︽周易︾的本身這門學問中 / ︽周易︾本身這門學問中<br>
+宋版的︽易經︾始用這裡的圖案 / 宋版的︽易經︾始用這樣的圖案<br>
+︽說卦傳︾：帝出乎震。齊乎冀。相見乎離。致役乎坤。說言乎兌。戰乎乾。勞乎坎。成言乎艮。 / ︽說卦傳︾：帝出乎震。齊乎巽。相見乎離。致役乎坤。說言乎兌。戰乎乾。勞乎坎。成言乎艮。<br>
+遽憐高處多風雨，莫到瓊樓最上層 / 應憐高處多風雨，莫到瓊樓最上層<br>
+先把綢卦 / 先把姤卦<br>
+宇宙間只有一個數︱︱ / 宇宙間只有一個數︱︱一<br>
+<br>
+第二部份<br>
+錯卦，是陰陽爻錯的意思 / 錯卦，是陰陽交錯的意思<br>
+如第二口上連到第四爻 / 如第二爻上連到第四爻<br>
+便成為三代表山的︵陽陰陰︶艮卦 / 便成為︵☶︶代表山的艮卦<br>
+便成為三代表水的坎卦 / 便成為︵☵︶代表水的坎卦<br>
+便成為︵陰陽陰︶水山蹇卦 / 便成為︵☵☶︶水山蹇卦<br>
+圓圖中的方國管空間 / 圓圖中的方圖管空間<br>
+都是依照先天卦的次序乾、兌、離、震、巽、坎、民、坤配合的 / 都是依照先天卦的次序乾、兌、離、震、巽、坎、艮、坤配合的<br>
+無妄 / 无妄<br>
+歸妹、中乳節、損 / 歸妹、中孚、節、損<br>
+商霍 / 商瞿<br>
+做人方面，等等，亦是如此。 / 做人方面，等等方面，亦是如此。<br>
+到飼堂裡放木頭牌子 / 到祠堂裡放木頭牌子<br>
+車子外面還要張掛布慢 / 車子外面還要張掛布幔<br>
+如不爽朗被國進去 / 如不爽朗被困進去<br>
+五行、於支配合起來 / 五行、干支配合起來<br>
+騶衍 / 鄒衍<br>
+有時連便飯都弄不到吃 / 有時連便當都弄不到吃<br>
+伏蠢 / 伏羲<br>
+說到生、克 / 說到生、剋<br>
+<br>
+第三部份<br>
+天斡 / 天幹<br>
+地支有人寫作﹁地技﹂，表示干的分又 / 地支有人寫作﹁地枝﹂，表示幹的分叉<br>
+累積變成洞月 / 累積變成潤月<br>
+漢墓星象刻古推論 / 漢墓星象刻石推論<br>
+偶然用它來參考參考是不得事的 / 偶然用它來參考參考是不礙事的<br>
+五多動者 / 五爻動者<br>
+騙使鬼神 / 驅使鬼神<br>
+六十兩耳順 / 六十而耳順<br>
+<br>
+第四部份<br>
+第一個道理是﹁天尊地卑，乾坤定矣﹂。尊卑是兩個對立的名詞 / 第一個道理是﹁天尊地卑，乾坤定矣﹂。五四運動的時候反對這兩句話，以前共產黨亦對它攻訐，說這是階級觀念，他們認為尊卑就是資本主義思想的階級觀念。其實他們完全搞錯了。尊卑是兩個對立的名詞<br>
+地辟於五 / 地闢於丑<br>
+這說法有人反對。﹁方以類聚﹂的真正意義，/ 這說法有人反對，後來我亦發現這一說法，是受了政治上唯物思想的影響而產生的。﹁方以類聚﹂的真正意義，<br>
+也就是中國所謂道家的鼻祖 / 也就是中國所謂道家著作的鼻祖<br>
+總統福特卜了一個卦說如何如何，/ 總統福特去大陸，有人為他卜了一個卦說如何如何，<br>
+則蓬萊以行 / 則蓬虆以行<br>
+達則兼濟天下 / 達則兼善天下<br>
+很容易走上述信的歧路 / 很容易走上迷信的歧路<br>
+以體天地之巽 / 以體天地之撰<br>
+十二律昌是中國人的發明 / 十二律呂是中國人的發明<br>
+常提到石、土、管、弦 / 常提到絲、竹、管、弦<br>
+其實這都是後來的。最早是管，吹奏的，弦就是絲，彈琴就是絲絃，所謂﹁絲竹管弦﹂。/ 保留，另加《台版：其實這都是後來的，最早是土石做的，後來才用絲做弦，用竹做管，即所絲竹管弦。》<br>
+是央卦 / 是夬卦<br>
+丙乾、坤、坎、離這四卦 / 而乾、坤、坎、離這四卦<br>
+這是醜會 / 這是丑會<br>
+一路分析下來，直到現在，來推算國家歷史的命運 / 《台版：一路分析下來，直到現在，來推算國家歷史的命運，依照他這一算法，我們這一代，正是處在國家民族倒楣的時候，要到民國七十三年國家民族才能轉運。照他路說法，轉運以後，有兩百到三百年的好運，比漢朝、唐朝、清朝的無勢還要大。將來是否如此，暫不去管它，但依照這一套算法，對於現在以前的歷史來說，是算得很對的。》<br>
+<br>
+第五部分<br>
+這也是賜經︾的道理 / 這也是︽易經︾的道理<br>
+可大則腎人之業 / 可大則賢人之業<br>
+也稱揀選 / 也稱簡選<br>
+墳卦代表耳朵 / 坎卦代表耳朵<br>
+吉凶悔吝者，生手動者也。 / 吉凶悔吝者，生乎動者也。<br>
+六支之動 / 六爻之動<br>
+這個像，/ 這個象，<br>
+事實上佔、卜、筮是三件事 / 事實上占、卜、筮是三件事<br>
+梅花易數，假托是邵康節發明的。 / 梅花易數，假托是邵康節發明的，據說，對求占卜者的姓名和出生年月日時，都可以算得出來，這些都是相當神秘的占卜之學。<br>
+支者，言乎變者也 / 爻者，言乎變者也<br>
+像呀 / 象呀<br>
+像亦是一種獸 / 彖亦是一種獸<br>
+無咎 / 无咎<br>
+齊小大者存手卦 / 齊小大者存乎卦<br>
+如乾卦卦之，改成乾之卦 / 如乾卦的「卦之」，改成乾的「之卦」<br>
+易為天地准 / 易與天地準<br>
+所以現在全世界有一些人瘋狂地研究靈魂學。 / 所以現在全世界有一些人瘋狂地研究靈魂學，這是新興的科學，祇是還沒有形成像現代自然科學那樣大的力量，但是已經有了這種趨向，將來可能會形成的。假使證明了有鬼神，那時唯物哲學談都不要談，宗教哲學亦站不住了。愛因斯坦發明了相對論以後，二十世紀末期的世界為之改觀。假使證明了有鬼神的話，世界又要轉向一個新的世紀，祇有少數的如中國的文化、印度的文化纔站得住而且再度興起，<br>
+孔子自己懂。 / 孔子自己懂，這是第一個問題。<br>
+﹁原始反終，故知死生之說。﹂ / 第二﹁原始反終，故知死生之說。﹂<br>
+不過每個宗教卻在為觀光旅館 / 不過每個宗教都在開觀光旅館<br>
+精氣為物是生不是命。體能健壯的人腦子思想一定比較差 / 精氣為物是生不是命，這個離開了身體，就是死亡，而離開身體之後，就是遊魂，是神。人活著這東西不叫作神，叫作靈魂，人死了這東西叫作遊魂，變成鬼，所以有鬼有神。「精氣為物」，鬼是物質的轉化，物質的轉變產生了東西，那個功能是鬼，如果靈魂的成分多，物質的成分少，則是神。體能健壯的人腦子思想一定比較差<br>
+身體一定多病。孔子所講的還是大原 / 身體一定多病。心物兩方面不能平衡，所以知道鬼神的形狀。孔子所講的還是大原<br>
+<br>
+第六部分<br>
+周流不拘 / 周流六虛<br>
+就是周文王被關在麥裡的時候 / 就是周文王被關在羑里的時候<br>
+有人說儒家是捧帝王的政治哲學，這是不對的，儒家、道家的思想，都是從︽易經︾來的。 / 有人說儒家是捧帝王的政治哲學，這是不對的，儒家、道家的思想，都是從︽易經︾來的。把今日的西方文化拉過來講，真正的民主，就是群龍无首，大吉大利，天下太平，人人都天下為公了。<br>
+雷鳴，電掣 / 雷鳴，電擊<br>
+西醫治了以後再去找著名的中醫處一個方於 / 西醫治了以後再去找著名的中醫處一個方子<br>
+天行與天道︱︱︽彖辭︾的說法 / 天行與天道︱︱︽象辭︾的說法<br>
+﹁象曰﹂，︽彖辭︾，象就是現象。據說︽彖辭︾是周公作的 / ﹁象曰﹂，這是象辭，象就是現象。據說︽象辭︾是周公作的<br>
+第二句話﹁君於以自強不息﹂ / 第二句話﹁君子以自強不息﹂<br>
+上面︽彖辭︾的第一句 / 上面︽象辭︾的第一句<br>
+﹁造﹂念﹁阻早﹂反切的音 / ﹁造﹂念﹁俎早﹂反切的音<br>
+貞者，事之干也 / 貞者，事之幹也<br>
+利則要達到和的利 / 利則要達到和<br>
+核干，中心就是貞 / 楨幹，中心就是貞<br>
+嘉會足以合體 / 嘉會足以合禮<br>
+貞國足以幹事 / 貞固足以幹事<br>
+遁世無悶，不見是而無門，樂則行之，優則速之 / 遯世无悶，不見是而无悶，樂則行之，憂則違之<br>
+中國歷史上有幾個人變法，第一個是春秋時的商鞅變法，還有一個是宋代的王安石變法 / 中國歷史上有三個人變法，第一個是春秋時的商鞅變法，第二個是漢代的王莽變法，第三個是宋代的王安石變法<br>
+因為私有財產制，產生了最古老的私有思想 / 因為私有財產制，產生了最古老的資本主義思想<br>
+到了宋朝王安石，也想走變法的路子 / 到了漢代，王莽又要變法，把私有財產制，變熬公有財產制，失敗了。到了宋朝王安石，亦想走這條路子<br>
+原書欠︽﹁乾。元亨利貞﹂︾一句卦辭<br>
+<br>
+第七部分<br>
+︽﹁九三曰﹃飛龍在天，利見大人﹄ / ︽﹁九五曰﹃飛龍在天，利見大人﹄<br>
+原書欠︽﹁上九，亢龍有悔。﹂︾一句爻辭<br>
+原書欠︽﹁象曰。天行健，君子以自強不息。﹂︾一句象辭<br>
+元者，善之長也。 / 文言曰：元者，善之長也。<br>
+解釋也炒得 / 解釋也妙得<br>
+勝王閣序 / 滕王閣序<br>
+落霞與孤騖齊飛 / 落霞與孤鶩齊飛<br>
+這篇文章中所透露的思想，卻被忽略了。 / 這篇文章中所透露的思想，卻被忽略了。再如馬克斯者流，所寫的東西，文字上簡直不通，可是因為他的文字不好，許多人反而去研究他似是而非的思想了，研究得一塌糊塗，同時也遺害了今天的中國。<br>
+統統拉到人文文化的這一面，這是第三節。 / 統統拉到人文文化的這一方面，很重要的。<br>
+四、彖辭：為彖曰 / 四、象辭：如象曰<br>
+一、曠元者善之長 / 一、自元者善之長也<br>
+是不是還有時代的問題 / 是否有些是後人所作，也很難說<br>
+當他欲想成名的時候 / 當他還未成名的時候<br>
+房屋前有塘後有塘守空房 / 房屋前有塘不好，後有塘守空房<br>
+潛能勿用 / 潛龍勿用<br>
+九四重則而不中 / 九四重剛而不中<br>
+與於地合其德 / 與天地合其德<br>
+先干天 / 先於天<br>
+知進而不知返 / 知進而不知退<br>
+其唯聖人手 / 其唯聖人乎<br>
+所謂亢龍是高亢 / 所謂亢就是高亢<br>
+所以坤卦的像是牝馬，這是炒得很的 / 所以坤卦的象是牝馬，這是妙得很的<br>
+品物鹹亨 / 品物咸亨<br>
+北馬地類 / 牝馬地類<br>
+及與類行 / 乃與類行<br>
+自然反目正常 / 自然反回正常<br>
+彖曰：地勢坤 / 象曰：地勢坤<br>
+那麼︽彖辭︾的解釋 / 那麼︽象辭︾的解釋<br>
+<br>
+第八部分<br>
+古書上常有的文字，歷史上許多人 / 在古書上時常看到歷史上的許多人<br>
+現在推開了每卦的卜卦關聯 / 現在推開了每卦的卦辭爻辭<br>
+老於引用了這個觀念 / 老子引用了這個觀念<br>
+再加熱就干了 / 再加熱就乾了<br>
+裡幹事行臣道 / 里幹事行臣道<br>
+這是中國文化四句話的原則 / 這四句話是中國文化的原則<br>
+﹁餘慶﹂、﹁餘殃﹂的﹁余﹂字，余是剩下來的，余是有變化的，並不是一定本身就報，這是中國人對因果報應的定理，中國文化一切都建立在這因果報應上 / <br>
+由辯之不早辯也 / 由辨之不早辨也<br>
+部下叛變干了主管的 / 部下叛變幹了主管的<br>
+根據︽易經︾孔子這個道理 / 根據孔子這個道理<br>
+不在肚子裡要鬼 / 不在肚子裡耍鬼<br>
+講到第三受﹁含章可貞﹂ / 講到第三爻﹁含章可貞﹂<br>
+天地變化，草木蓄 / 天地變化，草木蕃<br>
+亂問對社會國家都沒有貢獻的 / 亂闖對社會國家都沒有貢獻的<br>
+具體的是人的內部腸胃一切都好 / 具體的是人的內臟腸胃一切都好<br>
+陰陽爻戰 / 陰陽交戰<br>
+所以變稱血 / 所以亦稱血<br>
+對其它的卦就會比較曉得研究︱︱限於︽周易︾本身的研究 / 對其它的卦就會比較容易︱︱對於︽周易︾本身的研究<br>
+屯卦是一個卦名 / 屯卦就是水雷屯<br>
+如︽三國演義︾中的文字 / 如︽三國演義︾中的記載<br>
+事實上古代的屯字是其一橫代表一畫開天地 / 事實上古代的屯字是《象形文字》，其一橫代表一畫開天地<br>
+自己要十出來 / 自己要幹出來<br>
+橫的絲為給 / 橫的絲為綸<br>
+所以孔於說 / 所以孔子說<br>
+我們再看孔子怎麼說法廣象曰 / 我們再看孔子怎麼說法？﹁象曰<br>
+這個乘宇在梵文中 / 這個乘字在梵文中<br>
+推開卦與不卦的問題不說 / 推開字與不字的問題不說<br>
+等十點火的膏脂 / 等於點火的膏脂<br>
+屯卦的錯卦，為人風鼎卦 / 屯卦的錯卦，為火風鼎卦<br>
+老實說外國的宗教，它們的教主 / 老實說外國任何宗教，不管佛教、基督教、回教，它們的教主<br>
+我們文化的︽易經︾是從宗教 / 中華文化的文化的︽易經︾，也是從宗教<br>
+像技生意一樣 / 像拉生意一樣<br>
+再三讀，讀則不告 / 再三瀆，瀆則不告<br>
+可是與︽彖辭︾比較 / ︽象辭︾與︽彖辭︾比較<br>
+再看爻辭，並沒有一個系列 / 再看爻辭，也沒有一個完整的系列<br>
+另一說，交互卦的接法，這一陽爻與上兩交接，變為震卦，是長子。 /另外一說，是用交互卦的接法，這一陽爻與上兩交接，變為震卦，震是長子，所以說﹁子克家﹂。<br>
+只能防禦攻擊 / 只能防禦<br>
+是這樣的現象要安靜不動 / 就是這樣的現象，所以要安靜不動<br>
+夏、商、週三代 / 夏、商、周三代<br>
+第三卦需卦 / 第三講需卦<br>
+需字，用卦名本身的這個需字，來研究說文 / 這個卦名的需字，用說文來研究，<br>
+可是這個卦名，是誰替它定的 / 可是用作卦名，是誰替它定的<br>
+則不知道 / 則不知道，有說是文王定的有說是伏羲，但是伏羲畫八卦的時候，還沒有文字，所以這個說法也不一定<br>
+不會受國走絕路 / 不會受困走絕路<br>
+是根據︽彖辭︾﹁雲上於天﹂下雨 / 是根據︽象辭︾﹁雲上於天﹂來的，要下雨了<br>
+但小事沒有關係 / 但是沒有關係<br>
+最後是好 / 最後還是好的<br>
+也是自己內部問題，把敵人引過來，所以要敬慎處理，不會失敗 / 亦是自己內部問題，把敵人引進來的，所以要敬慎處理，才不會失敗<br>
+卜到這個卦，有流血的事 / 卜到這個卦，恐怕有流血的事情發生<br>
+這是外卦坎卦的初爻動 / 因為外卦坎的初爻動<br>
+第四爻動後 / 因為第四爻動後<br>
+外卦倒過來就是巽卦，另一觀念看，這一爻蠻牽強的， / 外卦倒過來就是巽卦，這裡是取巽順的意思，看來這一說法蠻牽強的<br>
+精神心血都轉在裡面。 / 精神心血都轉在裡面了，還是不得究竟。<br>
+在九五爻就好了 / 到九五爻就好了<br>
+也還是有他的道理，至於本文會了以後 / 也還有他的道理，知道了這個道理<br>
+︽易經︾的著作本身，是了不起 / 儘管著作等身，很了不起<br>
+稱為﹁十翼﹂，包括︽彖辭︾︵隨經分上下︶、︽彖辭︾︵隨經分上下︶、︽文言︾、︽繫辭︾︵上下傳︶ / 稱為﹁十翼﹂，包括有乾坤兩卦的文言，上下繫傳，︽彖辭︾︵以前分上下兩彖辭︶，︽象辭︾︵以前分上下兩象辭︶、︽序卦︾、︽說卦︾、雜卦等<br>
+我們受他這個歷史哲學的影響很大，現在它在西方的影響還是很大。現在全世界，包括歐美各大學，在歷史系新開一門歷史哲學的課程，把黑格爾的這一歷史哲學，算作歷史哲學中一門參考的思想，還沒有完全認為它是正統。因為歷史哲學在世界人類學術思想文化上面，還在剛開步走的階段，它的目的就是在探討有了天地萬物和人類，為什麼人類歷史會鬧成這樣？比如歷史上有幾個大問題，政治上民主也好，君主也好，獨裁也好，自由也好，無政府主義也好，各種各樣都實行過，可是哪一種能使人類永遠的太平？沒有見到過。以上這些主義在理論上都對，但事實上都不對，這是一個哲學問題。又如經濟方面，為什麼貨幣有了以後，從貝殼到現在的鈔票，每一出來，一直只有貶值，永遠沒有漲回去的時候，這是什麼原因？這是歷史哲學上的經濟問題。人類社會為什麼不能太平？為什麼不能平等？現在回頭來看，歷史哲學我們早就有了，︽易經︾就說過，而且比別人講的好多了。可惜沒有一個人去發揮，如果有人能把西方的唯物史觀和我們的歷史哲學研究到真的內涵，然後對世界的經濟政治發展融會貫通了，應該可以寫一本很好的書，那就對人類思想影響太大了。 / 我們受到這個哲學思想的影響很大，現在看來已經不算什麼，但是它在西方的影響還是不小。現在世界上有些大學歷史系內，多數都有歷史哲學的課程，有些還把唯物史觀作為歷史哲學中的重要參考思想。因為歷史哲學在世界人類的文化、學術思想方面，還在剛開步走的階段，它的目的就是在探討有了天地萬物和人類後，為什麼人類的歷史會鬧成這樣？比如人類政治史上的幾個大問題︱︱無論是民主也好，君主也好，獨裁也好，自由也好，無政府主義也好，各種各樣都實行過，可是那一種政治制度能使人類永遠的太平幸福？我們還沒有見到過。以上這些政治主張在理論上都有它的道理，但事實上也都有它的缺陷，這是一個哲學問題。又如經濟方面，為什麼有了貨幣以後，從貝殼到現在的鈔票，一使用後便祇有貶值，永遠沒有漲回去的時候，這是什麼原因？這是歷史哲學上的經濟問題。過去有一些人抓到這些問題，拿着雞毛當令箭，把它改頭換面來作宣傳，煽動性很大。他們把人類社會為什麼不能太平？為什麼不能平等的情形就歸過於他們認為的敵人，據以攻擊。現在回頭來看，歷史哲學我們早就有了，︽易經︾就說過，而且比別人講的好多了。可惜沒有人去發揮，如果有人能把西方的唯物史觀和我們固有的歷史哲學深入研究，真正暸解到他的內涵，然後再能對世界經濟、政治的發展融會貫通了，應該可以寫一本很好的書，那就對人類思想影響太大了。<br>
+但是要加以發揮 / 但是如要加以發揮<br>
+<br>
+第九部分<br>
+蒙者蒙也，物之稚也 / 蒙者蒙也，物之穉也<br>
+不會看懂，而且會覺得討厭 / 不但不懂，而且會覺得討厭<br>
+以前貴州、雲南的一些邊疆族人放蠱，麻醉人 / 傳說貴州、雲南的少數邊疆民族會放蠱來麻醉人<br>
+復則不妥矣 / 復則不妄矣<br>
+大過不行 / 大過了不行<br>
+下經開始的兩卦是鹹、恆 / 下經開始的兩卦是咸、恆<br>
+澤山威卦 / 澤山咸卦<br>
+有了社會組織自然有階段 / 有了社會組織自然有階級<br>
+這個現象的問題很大 / 這個亂象的問題很大<br>
+物不可以久居其所，故受之以遁，遁者退也 / 物不可以久居其所，故受之以遯，遯者退也<br>
+茂盛了，定衰老 / 茂盛了，一定衰老<br>
+物不可以久居其所，故受之以適 / 物不可以久居其所，故受之以遯<br>
+一定跑口家 / 一定跑回家<br>
+所以賽卦下面是解卦 / 所以蹇卦下面是解卦<br>
+就是革然後升發 / 就是萃然後升發<br>
+家庭擴大了 / 家族擴大了<br>
+說而後散之，故受之以澳 / 說而後散之，故受之以渙<br>
+這是我們偉大的歷史哲學。我們文化寶庫裡有這樣好的歷史哲學 / 這是我們偉大的歷史哲學，所以和馬克斯唯物史觀的歷史哲學比起來，所謂唯物史觀就一文不值了。我們文化寶庫裡有這樣好的歷史哲學<br>
+<br>
 (mPDB 2016/7/1)<br>
 德宇/德字<br>
 <br>
