--- a/html/book/audioAB005.html
+++ b/html/book/audioAB005.html
@@ -17,6 +17,8 @@ PlayMP3('AB005-07', '第七回《重陽遺刻》劉小珍錄音 2024/2/22');
 PlayMP3('AB005-08', '第八回《白衣少女》劉小珍錄音 2024/3/2');
 PlayMP3('AB005-09', '第九回《百計避敵》劉小珍錄音 2024/3/9');
 PlayMP3('AB005-10', '第十回《少年英俠》劉小珍錄音 2024/3/16');
+PlayMP3('AB005-11', '第十一回《風塵困頓》劉小珍錄音 2024/3/23');
+PlayMP3('AB005-12', '第十二回《英雄大宴》劉小珍錄音 2024/3/30');
 
 ?>
 
