Revised book description for 0850 and 16E1

--- a/html/book/0850.html
+++ b/html/book/0850.html
@@ -17,12 +17,24 @@ ShowEpubDownload('2015/3/6 (192K) 2016/7/1 2024/4/2');
 ShowVEpubDownload('2015/3/6 (192K) 2016/7/1 2024/4/2');
 BookSectionEnd();
 ?>
+<img src="covers/0850.jpg" HSPACE=8 align=right>
+
+好讀書櫃《典藏版》，感謝書蟲製作勘誤，感謝V Chow提供原書掃瞄檔。<br>
+（製作讀友按：由於各地政情不同，所以有部分意識形態不一樣的刪減如第271頁「永無盡止」一段便刪了以下一句：「所以和馬克斯唯物史觀的歷史哲學比起來，所謂唯物史觀就一文不值了。」這樣的刪減約有十處。）<br>
+<br>
 好讀書櫃《經典版》，感謝寶老師製作提供。感謝朱廷霖勘誤3處。感謝書蟲勘誤多處。<br>
-（編按：本書是《經典版》，誠徵繁體版原書掃瞄檔作為參考依據。為了便利讀者理解書中《易經》知識，站長特准並十分感謝讀友書蟲修正《經典版》錯別字及符號。）<br>
+<br>
+<br>
+<strong>作者簡介：</strong><br>
+<br>
+南懷瑾<br>
+<br>
+一九一八年生於浙江省樂清縣，幼承庭訓，少習諸子百家。一生行跡奇特，常情莫測；四處奔波，化育無數。出版有儒、釋、道等各家五十多種著述，以其獨到的方式，引領新世代的人們直入文化的核心智慧，讓讀者更樂於瞭解歷史人文的博大精深。先生二零一二年辭世，享年九十五歲。<br>
+<br>
 <br>
 <font size=2>
 <a href="?M=hd&P=pr">勘誤表</a>：<br>
-(書蟲　2024/4/2)<br>
+(書蟲　2024/3/29)<br>
 *更正依2006年臺灣二版三十一刷<br>
 <br>
 原書中有很多的「象」被誤作為「彖」，省略號「……」被破折號「--」代替，現就所見者更正。另原書經常在一篇未完便斷章，如乾卦便分開在第六部分和第七部分，現將乾、坤、屯、蒙、需、序卦各篇獨立成章。此外，將「無咎」、「無妄」依古文改為「无咎」、「无妄」，並用「☰ ☱ ☲ ☳ ☴ ☵ ☶ ☷」等字體代替「陽陽陽 ……」等。 <br>
