--- a/html/book/16E1.html
+++ b/html/book/16E1.html
@@ -37,6 +37,8 @@ ShowEpubDownload('2016/8/5 (514K) 2017/11/3');
 ShowVEpubDownload('2016/8/5 (514K) 2017/11/3');
 BookSectionEnd();
 ?>
+<img src="covers/16E1.jpg" HSPACE=8 vspace=2 align=right>
+
 好讀書櫃《經典版》，感謝楊宣文整理製作：「我是以大陸簡體網站的連載轉譯為正體版，改掉有些台灣讀者較難理解的用語，其他就保留原貌了。台灣有出版社（貓頭鷹）印行正體版，建議有興趣的讀者可以購買收藏。」感謝Tarron勘誤三體42處Ⅱ42處Ⅲ65處、Gilbert勘誤三體22處Ⅱ35處Ⅲ80處、鄔蓁緯勘誤三體9處、King勘誤Ⅱ1處、申明生勘誤三體147處Ⅱ249處、Gilbert勘誤三體4處、申明生勘誤Ⅲ303處、C K Fong勘誤三體8處Ⅱ12Ⅲ12處。<br>
 <br>
 《三體》是劉慈欣於2006年5月至12月在《科幻世界》雜誌上連載的長篇科幻小說，出版後成為中國大陸最暢銷的科幻長篇小說之一。2008年，該書的單行本由重慶出版社出版，小說的英文版獲得美國科幻奇幻作家協會2014年度「星雲獎」提名，並榮獲2015年雨果獎最佳小說獎。<br>
