--- a/html/book/16D7.html
+++ b/html/book/16D7.html
@@ -12,15 +12,14 @@ $title = '花葬';
 $book = 'E16D7';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2016/8/5 (361K) 2016/10/7');
-ShowPrcDownload('2016/8/5 (382K) 2016/10/7');
-ShowMobiDownload('2016/8/5 (1046K) 2016/10/7');
-ShowEpubDownload('2016/8/5 (242K) 2016/10/7');
-ShowVEpubDownload('2016/8/5 (242K) 2016/10/7');
+ShowUpdbDownload('2016/8/5 (361K) 2016/10/7 2024/4/9');
+ShowEpubDownload('2016/8/5 (242K) 2016/10/7 2024/4/9');
+ShowVEpubDownload('2016/8/5 (242K) 2016/10/7 2024/4/9');
 BookSectionEnd();
 ?>
 <img src="covers/16D7.jpg" HSPACE=8 align=right>
-好讀書櫃《典藏版》，感謝chin223提供掃描檔。感謝guinness按掃描檔OCR整理製作。譯者劉姿君。感謝Vivian勘誤7處、T.W. Lam勘誤1處。<br>
+好讀書櫃《典藏版》，感謝chin223提供掃描檔。感謝guinness按掃描檔OCR整理製作。譯者劉姿君。感謝Vivian勘誤7處、T.W. Lam勘誤1處、Jack Jiang勘誤6處。
+<br>
 <br>
 <b>作者簡介</b><br>
 <br>
@@ -50,6 +49,14 @@ BookSectionEnd();
 <br>
 <font size=2>
 <a href="?M=hd&P=pr">勘誤表</a>：<br>
+(Jack Jiang 2024/4/8)<br>
+或許更深了/或許更加深了(原文有誤) <br>
+一段距雕/一段距離<br>
+文緒婦同奔赴黃泉/文緒一同奔赴黃泉<br>
+執著也就有深/執著也就有多深(原文有誤)<br>
+琴紅仍秀麗迷人/琴江仍秀麗迷人<br>
+就聯絡夕的娘家﹂/就聯絡夕的娘家﹂。<br>
+<br>
 (T.W. Lam 2016/9/2)<br>
 獸欲/獸慾 <font color=#0066CC>(按原書未改)</font><br>
 秋花盛開/萩花盛開<br>
