Uploaded books 0101400441 thru 0101490445

--- a/html/Share/1010490427.html
+++ b/html/Share/1010490427.html
@@ -28,7 +28,7 @@ BookSectionEnd();
 <img src="covers/1010490427w.jpg" class="center">
 <br>
 好讀書櫃【典藏版】，感謝GP整理製作epub，感謝邱五提供掃瞄檔。<br>
-（本書未設updb檔，歡迎志工協助製作。）<br>
+（本書未設updb檔）<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
