--- a/html/Share/1010490440.html
+++ b/html/Share/1010490440.html
@@ -18,7 +18,7 @@ BookSectionEnd();
 ?>
 <img src="covers/1010490440.jpg" HSPACE=8 align=right>
 好讀書櫃【典藏版】，感謝GP整理製作epub，感謝chin223提供掃瞄檔。
-（本書未設updb檔，掃瞄檔尚欠原書封面，歡迎志工協助提供。）<br>
+（本書不設updb檔）<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
