--- a/html/Share/1010490438.html
+++ b/html/Share/1010490438.html
@@ -20,7 +20,7 @@ BookSectionEnd();
 <img src="covers/1010490438.jpg" HSPACE=8 align=right>
 <br>
 好讀書櫃【典藏版】，感謝GP整理製作epub，感謝邱五提供掃瞄檔。
-（本書未設updb檔，歡迎志工協助製作。）<br>
+（本書不設updb檔）<br>
 <br>
 <strong>本書簡介：</strong><br>
 <br>
