--- a/html/book/audioAB001.html
+++ b/html/book/audioAB001.html
@@ -107,6 +107,7 @@ PlayMP3('AB001-97', '第五十四篇《追隨郁達夫的味蕾》書亞錄音 2
 PlayMP3('AB001-98', '第五十五篇《怪僻食客溥心畬》書亞錄音 2024/4/27');
 PlayMP3('AB001-99', '第五十六之一篇《周恩來的餐桌外交藝術１彰顯國味》書亞錄音 2024/4/27');
 PlayMP3('AB001-100', '第五十六之二篇《周恩來的餐桌外交藝術２周旋酒場》書亞錄音 2024/5/4');
+PlayMP3('AB001-101', '第五十六之三篇《周恩來的餐桌外交藝術３烤鴨外交》書亞錄音 2024/5/11');
 
 ?>
 
