--- a/html/book/audioAB005.html
+++ b/html/book/audioAB005.html
@@ -23,6 +23,7 @@ PlayMP3('AB005-13', '第十三回《武林盟主》劉小珍錄音 2024/4/6');
 PlayMP3('AB005-14', '第十四回《禮教大防》劉小珍錄音 2024/4/20');
 PlayMP3('AB005-15', '第十五回《東邪門人》劉小珍錄音 2024/4/27');
 PlayMP3('AB005-16', '第十六回《殺父深仇》劉小珍錄音 2024/5/4');
+PlayMP3('AB005-17', '第十七回《絕情幽谷》劉小珍錄音 2024/5/11');
 
 ?>
 
