Revised books 1771 and 1010490191

--- a/html/book/1771.html
+++ b/html/book/1771.html
@@ -12,20 +12,49 @@ $title = '日本推理小說傑作精選３';
 $book = 'E1771';
 BookSectionBegin();
 ShowBookTitle();
-ShowUpdbDownload('2017/3/3 (271K)');
+ShowUpdbDownload('2024/5/11 2017/3/3 (271K)');
 ShowPrcDownload('2017/3/3 (276K)');
 ShowMobiDownload('2017/3/3 (775K)');
-ShowEpubDownload('2017/3/3 (184K)');
-ShowVEpubDownload('2017/3/3 (184K)');
+ShowEpubDownload('2024/5/11 2017/3/3 (184K)');
+ShowVEpubDownload('2024/5/11 2017/3/3 (184K)');
 BookSectionEnd();
 ?>
 <img src="covers/1771.jpg" HSPACE=8 align=right>
-好讀書櫃《典藏版》，感謝chin223提供掃描檔。感謝guinness按掃描檔整理製作。譯者朱佩蘭。感謝Ed2017勘誤19處、dw勘誤1處。<br>
+好讀書櫃《典藏版》，感謝chin223提供掃描檔。感謝guinness按掃描檔整理製作。譯者朱佩蘭。感謝Ed2017、dw、sue1289勘誤。<br>
 <br>
 本書共有十三篇短篇小說（谷崎潤一郎、江戶川亂步、木木高太郎、高木彬光、松本清張、有馬賴義、多岐川恭、三好徹、曾野綾子、夏樹靜子、森村誠一、石川喬司、艾勒里．昆恩），它們均提供給讀者推理、懸疑、行動以及所有類型的偵探方法，不論是形式或內容，它們都是上乘之作。<br>
 <br>
+<img src="covers/1771c.png"><br>
+<img src="covers/1771b.png">
+<img src="covers/1771a.png" HSPACE=8 align=right><br>
 <font size=2>
-<a href="?M=hd&P=pr">勘誤表</a>：<br>
+<strong>勘誤表</strong>：<br>
+(sue1289 2024/5/11/)<br>
+（提供三張圖片，讓讀者明白內容，好去進行推理。）<br>
+必恭必敬/畢恭畢敬<br>
+道三次腹瀉/這三次腹瀉<br>
+嗽口/漱口<br>
+道對丈夫/這對丈夫<br>
+接近到二、三百公尺左右/接近到二、三公尺左右<br>
+宮子大吃一瑰/宮子大吃一驚<br>
+道青年言/這青年言<br>
+內心都猜想/內心卻猜想<br>
+幸蝠/幸福<br>
+這些為資料/這些作為資料<br>
+「小姐」成「佐久子/「小姐」或「佐久子<br>
+墮落　　多岐川恭/墜落　　多岐川恭<br>
+非常爽袂/非常爽快<br>
+專攻物埋/專攻物理<br>
+比方晚/比方說<br>
+邇有/還有<br>
+瓧/瓩<br>
+不要興畜/不要興奮<br>
+咔咔山/咔𠼻咔𠼻山<br>
+摸在墓碑/撒在墓碑<br>
+謄出房間/騰出房間<br>
+一定要找來/一定要找回來<br>
+愛因斯坦的Ｅ＝ｍ的/愛因斯坦的E=mc²的<br>
+<br>
 (dw 2017/3/3)<br>
 表妹/表姊<br>
 <br>
